--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@solidjs/start": "^1.0.6",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.18",
+    "solid-toast": "^0.5.0",
     "tailwindcss": "^3.4.3",
     "vinxi": "^0.4.1"
   },
